# Jira-AI-Agent

./: .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  DEBUGGING.md  DEPLOYMENT.md  LICENSE  MCP_SETUP.md  PROJECT_STRUCTURE.md  Procfile  QUICKSTART.md  QUICK_DEPLOY.md  README.md  README_HF.md  REQUIREMENTS.md  UV_GUIDE.md  debug_process_query.py  deploy_prep.bat  main.py  pyproject.toml  railway.json  render.yaml  start_backend.bat  start_frontend.bat  start_mcp.bat  test_api_query.py
config/: config.yaml
examples/: demo.py
src/backend/: api.py  config_manager.py  llm_agent.py  utils.py
src/frontend/: app.py
src/mcp_server/: __init__.py  jira_mcp_server.py
tests/: test_basic.py
